<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/menu_stores" />
        <item
            android:id="@+id/nav_manage_user"
            android:icon="@drawable/ic_manage_user_black_24dp"
            android:title="@string/menu_manage_user" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq_black_24dp"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_documentation"
            android:icon="@drawable/ic_documentation_black_24dp"
            android:title="@string/menu_documentation" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/menu_rate" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/menu_logout"/>
    </group>

</menu>
