<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".view.fragment.TermsAndPrivacyFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_binding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/terms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_regular"
                            android:gravity="start"
                            android:text="@string/privacy"
                            android:textColor="@color/black"
                            android:textSize="@dimen/fourteen_sp_text_size" />
                    </LinearLayout>

                    <LinearLayout
                         android:id="@+id/aboutPortionLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/lato_regular"
                            android:text="@string/string_1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/fourteen_sp_text_size" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/lato_regular"
                            android:text="@string/string_2"
                            android:textColor="@color/black"
                            android:textSize="@dimen/fourteen_sp_text_size" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/lato_regular"
                            android:text="@string/string_3"
                             android:textColor="@color/black"
                            android:textSize="@dimen/fourteen_sp_text_size" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/top_ten_dp"
                                    android:text="Overall Supervised by :"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sixteen_sp_tx_size"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/black" />
                            </LinearLayout>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="Dr. Ireen Akhter Chowdhury"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fifteen_sp_txt"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Nutrition Officer"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen_sp_text_size" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="UNICEF Bangladesh"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen_sp_text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="Sheikh Jahangir Hasan Manik"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fifteen_sp_txt"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Coordinator"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen_sp_text_size" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Islampur Salt Mill Owner Versatile Cooperative Society Limited "
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen_sp_text_size" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/top_ten_dp"
                                    android:text="Implemented by :"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sixteen_sp_tx_size"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/black" />
                            </LinearLayout>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="Islampur Salt Mill Owner Versatile Cooperative Society Limited and Ministry of Industries,"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen_sp_text_size" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Government of the People Republic of Bangladesh"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen_sp_text_size" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/top_ten_dp"
                                    android:text="Developed by :"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/sixteen_sp_tx_size"
                                    android:textStyle="bold" />

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/black" />
                            </LinearLayout>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="Agami Soft Limited"
                                android:textColor="@color/black"
                                android:textSize="@dimen/fourteen_sp_text_size" />


                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>
    </LinearLayout>
</layout>